added review creation

--- a/src/main/java/pl/openthejar/TODO
+++ b/src/main/java/pl/openthejar/TODO
@@ -6,3 +6,5 @@ uslugi zrobione typowo dla klineta/pracownika + wykonane lub nie
 
 ///
 co sie odpierdala w reservation resource //id
+
+reservation
